[package]
name = "n64"
version = "0.0.1"
edition = "2021"

[features]
gui = ["winit", "winit_input_helper", "pixels"]

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.ctrlc]
version = "3.4.1"

[dependencies.rustyline]
version = "12.0.0"

[dependencies.tracing-core]
version = "0.1"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.winit]
version = "0.28"
optional = true

[dependencies.winit_input_helper]
version = "0.14"
optional = true

[dependencies.pixels]
version = "0.13"
optional = true

[build-dependencies.cc]
version = "1.0"
