[package]
name = "n64"
version = "0.0.1"
edition = "2021"

[features]
default = ["gui", "tracing"]
gui = ["winit", "winit_input_helper", "wgpu", "imgui", "imgui-winit-support", "imgui-wgpu", "pollster", "image", "cgmath"]
nodebuglogging = ["tracing?/release_max_level_info"]
headless = []

[dependencies]
backtrace = "0.3.69"

[dependencies.cgmath]
version = "0.18"
optional = true

[dependencies.atomicring]
version = "1.2.9"

[dependencies.image]
version = "0.24"
optional = true
features = ["png", "jpeg"]

[dependencies.bytemuck]
version = "1.12"
features = ["derive"]

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.ctrlc]
version = "3.4.1"

[dependencies.rustyline]
version = "12.0.0"

[dependencies.tracing-core]
version = "0.1"

[dependencies.tracing]
version = "0.1"
optional = true
#features = ["release_max_level_warn"]

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.num-traits]
version = "0.2"

[dependencies.encoding_rs]
version = "0.8"

[dependencies.gilrs]
version = "0.10"

[dependencies.imgui-wgpu]
version = "0.24"
optional = true

[dependencies.wgpu]
version = "0.17"
optional = true

[dependencies.winit]
version = "0.27"
optional = true

[dependencies.imgui]
version = "0.11"
optional = true

[dependencies.imgui-winit-support]
version = "0.11"
optional = true

[dependencies.winit_input_helper]
version = "0.13"
optional = true

[dependencies.pollster]
version = "0.3"
optional = true

[build-dependencies.cc]
version = "1.0"

