[package]
name = "n64"
version = "0.0.1"
edition = "2021"

[features]
default = ["gui", "nodebuglogging"]
gui = ["winit", "winit_input_helper", "wgpu", "imgui", "imgui-winit-support", "imgui-wgpu", "pollster", "image", "cgmath"]
nodebuglogging = ["tracing/release_max_level_info"]
headless = []
dev = ["gui"]

[dependencies]
atomic-counter = "1.0.1"
backtrace = "0.3.69"
clap = { version = "4.4.18", features = ["derive"] }
crc64 = "2.0.0"

[dependencies.cgmath]
version = "0.18"
optional = true

[dependencies.atomicring]
version = "1.2.9"

[dependencies.image]
version = "0.24"
optional = true
features = ["png", "jpeg"]

[dependencies.bytemuck]
version = "1.12"
features = ["derive"]

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.ctrlc]
version = "3.4.1"

[dependencies.rustyline]
version = "12.0.0"

[dependencies.tracing-core]
version = "0.1"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.num-traits]
version = "0.2"

[dependencies.encoding_rs]
version = "0.8"

[dependencies.gilrs]
version = "0.10"

[dependencies.imgui-wgpu]
optional = true
git = "https://github.com/sarchar/imgui-wgpu-rs"
branch = "wgpu-0.19-tmp"

[dependencies.wgpu]
version = "0.19"
optional = true

[dependencies.winit]
version = "0.29"
optional = true

[dependencies.imgui]
optional = true
git = "https://github.com/sarchar/imgui-rs"

[dependencies.imgui-winit-support]
optional = true
git = "https://github.com/sarchar/imgui-rs"

[dependencies.winit_input_helper]
version = "0.15"
optional = true

[dependencies.pollster]
version = "0.3"
optional = true

[build-dependencies.cc]
version = "1.0"

